Updates combo box, update reports page